# tawnyAV

./: .gitignore  Cargo.toml  README.md  av.py  main.py  palette.py  reaction_diffusion.py  requirements.txt  run_linux_mac.sh  run_windows.bat  setup_linux_mac.sh  setup_windows.bat
resources/: palette.txt
resources/shaders/: basic.glsl  cloud.glsl  colours.glsl  edge_detector.glsl  glitch_melt.glsl  kbmarcher.glsl  melt.glsl  parallax_noise.glsl  slow_melt.glsl
resources/shaders/Spare shaders/: glitch_melt.glsl  wavy.txt
shaders/: basic.frag  basic.vert
shaders/shader_test/: fragment.glsl  shader_test.py  vertex.glsl
src/: audio_processing.py  audio_processing.rs  brians_brain_automata.py  cellular_automata.py  game_of_life.py  globals.rs  gui.py  input.rs  main.rs  palette.py  reaction_diffusion.py  reaction_diffusion1.py  reaction_diffusion2.py  render.py  scene.py  scene.rs  scene_manager.rs  shader_test.py  waveform.py
src/effects/: brians_brain_automata.py  game_of_life.py  reaction_diffusion1.py  reaction_diffusion2.py  video.py  video_reaction_diffusion.py  waveform.py
src/scenes/: basic_scene.rs  cloud_scene.rs  colour_scene.rs  game_of_life_scene.rs  glitch_melt_scene.rs  image_shader_scene.rs  inverted_scene.rs  melt_scene.rs  mod.rs  paper_melt_scene.rs  reaction_diffusion_scene.rs  scene.rs  shader_scene.rs  slow_melt_scene.rs
