[package]
name = "tawny_av"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.13"
cpal = "0.15"
dasp = "0.11"
rand = "0.8.5"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
