[package]
name = "tawny_av"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rendering, window management, and input
macroquad = "0.4.13"
# Audio processing
cpal = "0.15"
dasp = "0.11"
# Misc
lazy_static = "1.5.0"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
